@@ -2,7 +2,7 @@
 <!DOCTYPE install PUBLIC "-//Joomla! 1.6//DTD template 1.0//EN" "http://www.joomla.org/xml/dtd/1.6/template-install.dtd">
 <extension
 	type="template"
-	version="1.6"
+	version="1.7"
 	client="administrator">
 	<name>bluestork</name>
 	<creationDate>07/02/09</creationDate>
@@ -11,7 +11,7 @@
 	<authorUrl>http://www.kontentdesign.com</authorUrl>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>TPL_BLUESTORK_XML_DESCRIPTION</description>
 	<files>
 		<filename>index.php</filename>
