@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE install PUBLIC "-//Joomla! 1.6//DTD template 1.0//EN" "http://www.joomla.org/xml/dtd/1.6/template-install.dtd">
-<extension type="template" version="1.6" client="administrator">
+<extension type="template" version="1.7" client="administrator">
 	<name>hathor</name>
 	<creationDate>May 2010</creationDate>
 	<author>Andrea Tarr</author>
@@ -8,7 +8,7 @@
 	<authorUrl>http://www.tarrconsulting.com</authorUrl>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>TPL_HATHOR_XML_DESCRIPTION</description>
 	<files>
 		<filename>component.php</filename>
